syntax = "proto3";

option csharp_namespace = "UserService";

package user;

// The greeting service definition.
service User {
  // Sends a greeting
  rpc GetUser (UserRequest) returns (UserReply);
}

// The request message containing the user's name.
message UserRequest {
  string name = 1;
}

// The response message containing the greetings.
message UserReply {
  string message = 1;
}
